infrastructure/monitoring/monitoring-stack-network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: monitoring-clusterwide-security-policy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": monitoring
        app.kubernetes.io/name: grafana
    toPorts:
    - ports:
      - port: "9090"
        protocol: TCP
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      - port: "8081"
        protocol: TCP
      - port: "10250"
        protocol: TCP
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "6443"
        protocol: TCP
  - toEndpoints:
    - matchExpressions:
      - key: "k8s:io.kubernetes.pod.namespace"
        operator: Exists
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "10250"   # Kubelet
      - port: "9100"    # Node Exporter
      - port: "2381"    # etcd Metrics
      - port: "10257"   # Controller Manager
      - port: "10259"   # Scheduler
      - port: "9962"    # Cilium Agent Metrics
      - port: "9965"    # Hubble Metrics
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "8080"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
